--- a/frontend/src/app.scss
+++ b/frontend/src/app.scss
@@ -1,3 +1,8 @@
+.container {
+  max-width: 800px;
+  width: 100%;
+}
+
 div {
-  background-color: green;
+  background-color: rgba(70, 9, 54, 0.794);
 }
